// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PanelHeader > matches snapshot with title and year 1`] = `
<div>
  <div
    style="display: flex; gap: 12px; align-items: flex-start; padding-right: 36px;"
  >
    <div
      style="width: 44px; height: 44px; border-radius: 8px; background: linear-gradient(135deg, #e74c3c, #c0392b); display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 2px 8px rgba(231,76,60,0.4);"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-film"
        fill="none"
        height="20"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M7 3v18"
        />
        <path
          d="M3 7.5h4"
        />
        <path
          d="M3 12h18"
        />
        <path
          d="M3 16.5h4"
        />
        <path
          d="M17 3v18"
        />
        <path
          d="M17 7.5h4"
        />
        <path
          d="M17 16.5h4"
        />
      </svg>
    </div>
    <div>
      <h2
        style="font-family: "Playfair Display", serif; font-size: 18px; font-weight: 900; color: #f0f0f0; line-height: 1.25; margin: 0px;"
      >
        Vertigo
      </h2>
      <span
        style="font-size: 12px; color: #e74c3c; font-weight: 700;"
      >
        1958
      </span>
    </div>
  </div>
</div>
`;

exports[`PanelHeader > matches snapshot with title only (no year) 1`] = `
<div>
  <div
    style="display: flex; gap: 12px; align-items: flex-start; padding-right: 36px;"
  >
    <div
      style="width: 44px; height: 44px; border-radius: 8px; background: linear-gradient(135deg, #e74c3c, #c0392b); display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 2px 8px rgba(231,76,60,0.4);"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-film"
        fill="none"
        height="20"
        stroke="#fff"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M7 3v18"
        />
        <path
          d="M3 7.5h4"
        />
        <path
          d="M3 12h18"
        />
        <path
          d="M3 16.5h4"
        />
        <path
          d="M17 3v18"
        />
        <path
          d="M17 7.5h4"
        />
        <path
          d="M17 16.5h4"
        />
      </svg>
    </div>
    <div>
      <h2
        style="font-family: "Playfair Display", serif; font-size: 18px; font-weight: 900; color: #f0f0f0; line-height: 1.25; margin: 0px;"
      >
        Vertigo
      </h2>
    </div>
  </div>
</div>
`;
